# DirectStorageSample

./: .gitattributes  .gitlab-ci.yml  .gitmodules  BuildCode.bat  BuildMediaCompressed.bat  BuildMediaUncompressed.bat  CMakeLists.txt  CreateBinaryOnlyDistributionCompressed.bat  CreateBinaryOnlyDistributionUncompressed.bat  RunDirectStorage.bat  RunDirectStorageCPUDecompression.bat  RunNoDirectStorage.bat  common.cmake  profile.bat  readme.md
libs/DirectStorage/: CMakeLists.txt
media/Demo/: NOTICES.txt
media/Demo/CheckerPlane/: checkerplane.gltf
media/Demo/SS/: SShuttle.gltf
media/Demo/X1/: bell_x1.gltf
src/Common/: CMakeLists.txt  CompressionSupport.cpp  CompressionSupport.h  DirectStorageSample.json  DirectStorageSampleTexturePackageFormat.h  PackageUtils.cpp  PackageUtils.h
src/DX12/: ArtificialWorkload.cpp  ArtificialWorkload.h  CMakeLists.txt  DirectStorageSample.cpp  DirectStorageSample.h  GLTFTextureAndBuffersDirectStorage.cpp  GLTFTextureAndBuffersDirectStorage.h  Mandelbrot.hlsl  Profile.h  Renderer.cpp  Renderer.h  SampleOptions.h  TransparentCube.cpp  TransparentCube.h  TransparentCube.hlsl  UI.cpp  UI.h  stdafx.cpp  stdafx.h
src/TextureConverter/: CMakeLists.txt  TextureConverter.cpp  stdafx.h
src/Timestamp/: CMakeLists.txt  Timestamp.cpp
